fixing home page overflow and center videos page

--- a/src/page/HomePage/HomePage.scss
+++ b/src/page/HomePage/HomePage.scss
@@ -1,7 +1,7 @@
 @import '../../utils/constants.scss';
 .home-page {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 64px);
 
   .home-page-image-container {
     display: flex;
@@ -22,6 +22,7 @@
   }
   .web-name-mobile {
     font-size: 53px;
+    margin-bottom: 70px;
   }
   .css-typing {
     direction: rtl;
