--- a/src/page/VideosPage/VideosPage.scss
+++ b/src/page/VideosPage/VideosPage.scss
@@ -62,4 +62,7 @@
   width: 90%;
   place-items: center;
   justify-content: center;
+  @media only screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
